# namosim

./: .buildinfo  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-hooks.yaml  .readthedocs.yaml  2019_04_15_config.rviz  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  Dockerfile  LICENSE  README.md  build.sh  contributing.html  creating_custom_agents.html  creating_custom_scenarios.html  creating_svg_scenario.html  creating_yaml_scenario.html  genindex.html  guides.html  index.html  installation.html  modules.html  namosim.agents.html  namosim.algorithms.html  namosim.display.html  namosim.html  namosim.mapgen.html  namosim.navigation.html  namosim.scripts.html  namosim.utils.html  namosim.world.html  namosim.world.sensors.html  objects.inv  package.xml  paper.bib  paper.md  py-modindex.html  pyproject.toml  (+10 more)
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
_modules/: index.html
_modules/namosim/: data_models.html  exceptions.html  input.html  svg_styles.html
_sources/: contributing.rst.txt  creating_svg_scenario.rst.txt  guides.rst.txt  index.rst.txt  installation.rst.txt  usage.rst.txt
config/: config.yaml
data/: brenault-s-namo-sim-private_issues_2020-06-30.csv
data/gridsearch-dataset/: download_dataset.sh
data/ontologies/: pizza_onto.owl
data/worlds/: 01.yaml  02.yaml  03.yaml
docs/source/: conf.py  contributing.rst  creating_custom_agents.rst  creating_custom_scenarios.rst  creating_svg_scenario.rst  creating_yaml_scenario.rst  guides.rst  index.rst  installation.rst  intro.rst  namosim.algorithms.rst  namosim.behaviors.algorithms.rst  namosim.behaviors.plan.rst  namosim.behaviors.rst  namosim.display.rst  namosim.navigation.rst  namosim.rst  namosim.utils.rst  namosim.world.rst  namosim.world.sensors.rst  namosim.worldreps.entity_based.rst  namosim.worldreps.entity_based.sensors.rst  namosim.worldreps.occupation_based.rst  namosim.worldreps.rst  scenarios.rst  testing.rst  usage.rst
namoros/: README.md  build_plugins.sh  launch_multi.sh  launch_space_conflict.sh  launch_stolen_obstacle_conflict.sh  namo_world_template.sdf  package.xml  requirements.txt  setup.py
namoros/config/: map_walls.stl  namo_world.sdf  namoros_config.yaml  nav2_params.yaml  stolen_obstacle_conflict.yaml
namoros/gz_plugin/: CMakeLists.txt  Namo.cpp  Namo.hh
namoros/namoros/: behavior_node.py  movable_obstacle_tracker.py  namo_planner.py  planner_node.py
namoros/rviz/: nav2_default_view.rviz
namoros_msgs/: package.xml
namosim/: config.py  data_models.py  data_models_v2.py  exceptions.py  input.py  main.py  models.py  package.xml  report.py  requirements.txt  sandbox.py  scenario_generation.py  simulator.py  simulator_v2.py  trainer.py
namosim/agents/: __init__.py  agent.py  models.py  navigation_only_agent.py  ppo_agent.py  rrt_agent.py  stilman_2005_agent.py  stilman_configurations.py  stilman_only_agent.py  stilman_rrt_agent.py  stilman_rrt_star_agent.py  teleop_agent.py
namosim/algorithms/: cell_heap_node.py  graph_search.py  kd_tree.py  multi_goal_a_star.py  new_local_opening_check.py  rrt.py  rrt_node.py  rrt_star.py
namosim/behaviors/: __init__.py  baseline_behavior.py  navigation_only_behavior.py  stilman_2005_behavior.py  stilman_configurations.py  stilman_only_behavior.py
namosim/display/: colors.py  conversions.py  painter.py  ros2_publisher.py  ros_nodes.py  ros_publisher.py  ros_publisher_config.py
namosim/mapgen/: mapgen.py
namosim/namosim/: data_models.py  simulator.py  trainer.py
namosim/navigation/: action_result.py  basic_actions.py  conflict.py  navigation_path.py  navigation_plan.py
namosim/scripts/: compare_results.py  generate_results_table.py  svg2map.py  svg2stl.py
namosim/utils/: collision.py  connectivity.py  conversion.py  import_export.py  stats_analysis.py  stats_utils.py  svg_preprocessing.py  utils.py
namosim/world/: binary_occupancy_grid.py  discretization_data.py  entity.py  goal.py  models.py  obstacle.py  robot.py  social_topological_occupation_cost_grid.py  taboo.py  world.py  world_v2.py
namosim/worldreps/: discretization_data.py
notebooks/: analysis-v2-jsa.ipynb  analysis-v2.ipynb  analysis.ipynb
rviz/: 02_basic_with_opening_ortho_3D_view_.rviz  02_basic_with_opening_ortho_top_view_.rviz  05_social_costmap_no_lines_raw.rviz  2019_04_15_config.rviz  basic_multi_case_config.rviz  basic_view.rviz  four_robots_config.yaml  two_robots_config.rviz  two_robots_robot_01_view.rviz  two_robots_robot_02_view.rviz  two_robots_sim_view.rviz
rviz/ROS2/: basic_view.rviz
scripts/: gen_scenarios.sh  gen_scenarios_citi.sh  gen_scenarios_intersections.sh  gen_scenarios_willow_garage.sh  gen_scenarios_willow_garage_multi_shape.sh  launch_experiments.sh  launch_experiments_intersections.sh  launch_experiments_willow_garage_multi_shape.sh  test_all.sh  test_e2e.sh  test_unit.sh  visualize-results.sh
snamosim/: main.py  migrate_yaml_to_json.py  sandbox.py  scenario_generation.py  simulator.py
snamosim/behaviors/: baseline_behavior.py  navigation_only_behavior.py  stilman_2005_behavior.py  wu_levihn_2014_behavior.py
snamosim/display/: colors.py  painter.py  ros_conversion.py  ros_publisher.py  ros_publisher_config.py  tf_replacement.py
snamosim/tests/: sandbox.py
snamosim/utils/: b2_collision.py  collision.py  connectivity.py  conversion.py  import_export.py  stats_analysis.py  stats_utils.py  svg_preprocessing.py  utils.py
src/: a_star.py  behavior_report.py  binary_inflated_occupancy_grid.py  binary_occupancy_grid.py  conversion.py  discretization_data.py  entity.py  obstacle.py  path.py  plan.py  plan_step.py  probabilist_occupancy_grid.py  robot.py  ros_node.py  ros_publisher.py  s_namo_behavior.py  sandbox.py  simulation_report.py  simulator.py  social_topological_occupation_cost_grid.py  standard_behavior.py  stilman_2005_behavior.py  taboo.py  test.py  thing.py  utils.py  world.py
src/behaviors/: baseline_behavior.py  behavior_report.py  goal_report.py  navigation_only_behavior.py  new_stilman_2005_behavior.py  stilman_2005_behavior.py  (+1 more)
tests/: sandbox.py
worlds/: 02.yaml  03.yaml  04.yaml
(+489 files in other folders)
