[tool.poetry]
name = "namosim"
version = "0.0.1"
description = "NAMO and S-NAMO Algorithms and tools for robotics."
authors = [
  "Benoit RENAULT <xia0ben-contact-pypi@littleroot.net>",
  "david.brown@inria.fr",
]
license = "MIT"
readme = "README.md"
repository = "https://gitlab.inria.fr/chroma/namo"
keywords = ["namo", "robitics", "simulator"]

[tool.poetry.dependencies]
# CORE LIBRARIES (used about everywhere)
python = ">=3.9,<3.13"

aabbtree = "^2.8.1"   # Used to accelerate collision check detection
matplotlib = "^3.8.1" # For standalone display without ROS Rviz, and for debug purposes
numpy = "^1.26.1"     # For all matrix-based logic
shapely = "^2.0.2"    # For all geometry-based logic

# LOOSELY COUPLED LIBRARIES (used just in a few instances, could be easily replaced)
bidict = "^0.22.1"       # Two-way dictionnary library used in simulator main class
jsonpickle = "^3.0.2"    # Used for serialization and deserialization of simulation and world data
mapbox-earcut = "^1.0.1" # To triangulate polygons (required for conversion to ROS messages)
pillow = "^10.1.0"       # Used to convert grids to images
plotly = "^5.18.0"       # Used for beautiful stats display
psutil = "^5.9.6"        # Used for large scale multi-process testing
pycrunch-trace = "^0.2"  # Used for detailed profiling
scikit-image = "^0.22.0" # Used to rasterize polygon contours and for image skeleton computation
svgpath2mpl = "^1.0.0"   # Used to convert SVG geometries to Shapely geometries
tqdm = "^4.66.1"         # Used for progressbars

# LIBRARIES THAT ARE BOUND TO GO AWAY
future = "^0.18.3"  # Used for metaclass support needed for writing RosPublisher singleton
pyyaml = "^6.0.1"   # Used to import world and simulation config files in their old format, now in JSON, less error-prone
rasterio = "^1.3.9" # Used for testing the library's rasterization capabilities

# DEV LIBRARIES (for build/test purposes only)
ruff = "^0.1.5"        # Used for code linting/formatting
poethepoet = "^0.24.3"
pyright = "^1.1.335"
typing-extensions = "^4.8.0"

[tool.poe.tasks]
lint_check = "ruff check ."                                             # lint check
lint_fix = "ruff check --fix ."                                         # lint fix
format = "ruff format ."                                                # format
test = "python -m unittest discover -s tests.unit_tests -p '*_test.py'" # test

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.8
target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["F841", "E741"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pyright]
reportMissingTypeStubs = false
reportUnknownVariableType = false
