[tool.poetry]
name = "namosim"
version = "0.0.0"
description = "NAMO and S-NAMO Algorithms and tools for robotics."
authors = [
  "Benoit RENAULT <xia0ben-contact-pypi@littleroot.net>",
  "david.brown@inria.fr",
]
license = "MIT"
readme = "README.md"
repository = "https://gitlab.inria.fr/chroma/namo"
keywords = ["namo", "robitics", "simulator"]

[tool.poetry.dependencies]
# CORE LIBRARIES (used about everywhere)
python = ">=3.10,<3.13"

aabbtree = "^2.8.1"   # Used to accelerate collision check detection
matplotlib = "^3.8.1" # For standalone display without ROS Rviz, and for debug purposes
numpy = "^1.26.1"     # For all matrix-based logic
shapely = "^2.0.2"    # For all geometry-based logic

# LOOSELY COUPLED LIBRARIES (used just in a few instances, could be easily replaced)
bidict = "^0.22.1"       # Two-way dictionnary library used in simulator main class
jsonpickle = "^3.0.2"    # Used for serialization and deserialization of simulation and world data
mapbox-earcut = "^1.0.1" # To triangulate polygons (required for conversion to ROS messages)
pillow = "^10.1.0"       # Used to convert grids to images
plotly = "^5.18.0"       # Used for beautiful stats display
psutil = "^5.9.6"        # Used for large scale multi-process testing
pycrunch-trace = "^0.2"  # Used for detailed profiling
scikit-image = "^0.22.0" # Used to rasterize polygon contours and for image skeleton computation
svgpath2mpl = "^1.0.0"   # Used to convert SVG geometries to Shapely geometries
tqdm = "^4.66.1"         # Used for progressbars

# LIBRARIES THAT ARE BOUND TO GO AWAY
pyyaml = "^6.0.1"   # Used to import world and simulation config files in their old format, now in JSON, less error-prone
rasterio = "^1.3.9" # Used for testing the library's rasterization capabilities

typing-extensions = "^4.8.0"
pydantic = "^2.5.0"
rospkg = "^1.5.0"
six = "^1.16.0"
cairosvg = "^2.7.1"
pydantic-xml = "^2.5.0"
typer = { extras = ["all"], version = "^0.9.0" }
jupyter = "^1.0.0"
pandas = "^2.2.0"
torch = "^2.1.2"
wandb = "^0.16.2"
transformers = { extras = ["torch"], version = "^4.38.2" }
torchvision = "^0.17.1"
numpy-stl = "^3.1.1"
opencv-python = "^4.9.0.80"
moviepy = "^1.0.3"
pytest = "8.0.2"
lark = "^1.1.9"
pytest-cov = "^5.0.0"
torchmetrics = "^1.4.0"
black = "^24.8.0"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
poethepoet = "^0.24.3"
pyright = "^1.1.337"
sphinx-rtd-theme = "^1.3.0"
sphinx-copybutton = "^0.5.2"
pre-commit = "^3.5.0"

[tool.poe.tasks]
format = "black ."                                                                # format
unit_test.cmd = "python -m pytest --cov=namosim --cov-fail-under=27 tests/unit"   # unit tests
unit_test.env = { NAMO_NO_DISPLAY_WINDOW = "TRUE" }                               # env vars for unit tests
e2e_test.cmd = "python -m pytest tests/e2e"                                       # e2e tests
e2e_test.env = { NAMO_NO_DISPLAY_WINDOW = "TRUE", NAMO_DEACTIVATE_RVIZ = "TRUE" } # env vars for e2e tests
type_check = "pyright"
all_checks = ["format", "type_check", "unit_test", "e2e_test"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "RET505"]
ignore = ["F841", "E741", "F401"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pyright]
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportIncompatibleMethodOverride = false
reportAttributeAccessIssue = false
# reportUnknownParameterType = true
include = ["namosim", "tests/unit", "tests/e2e"]
exclude = [
  "namosim/world/social_topological_occupation_cost_grid.py",
  "namosim/algorithms/d_star_lite.py",
  "namosim/algorithms/multi_goal_a_star.py",
  "tests/unit/collision_test.py",
]

[tool.pytest.ini_options]
addopts = "-s"
